--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -12,12 +12,46 @@ __William Singer__:AAAS Science and Technology Policy Fellow, USDA- Office of th
  
 __Michael Loh__
   - Plant based food
-  - Food traits for TUFO
-  -       -High proein levelsl large and unifor seed
-  - Food traits for MISO
-  -       High sugar
-  -       Good water intake
-  - SoyMaik
-  -       Medium protien
-  - SDS/app
+  - Food traits for TUFO: High protein levels large and uniforn seed
+  - Food traits for MISO: High sugar; Good water intake
+  - Food traits for SoyMilk: Medium protien
 
+### Abiotic Stress - Drought
+
+__Larry Purcell: Nitrogen fixation: What is it good for? (1) Yield (2) Protein__
+
+  - "Speed Breeding"
+using growth chamber Planting to R1 26+/-2.4 days; Planting R1-R7 56
+  - [Research paper](https://link.springer.com/article/10.1007/s00122-010-1493-4)
+  - Oil concentration not affected by N treatment w/ Nod 
+  - Appling that much N is not economical 
+  - Oil concentratoin increase by N treatment w/o Nod
+  - Non-nodule Williams82 is resesive rj5 and rj6 
+  - Mapping rj5 and rj6
+  - Quantifying N2 fixation is critcial for improvoing seed protein and yield 
+  - High yielding, non-nods for appropriate materity are essential 
+
+__Vara Prasad: Impact of drought/heat on soybean and role of crop physiology in addressing food and nutrition Security__
+  - Growth and develop stages - [Vegetative and Reproductive](https://bookstore.ksre.ksu.edu/pubs/MF3339.pdf)
+  - [High temperature stress in soybean](https://doi.org/10.2135/cropsci2010.10.0571) 
+  - [Reproductive success in soybean in high temperatures](https://pubmed.ncbi.nlm.nih.gov/30095867/)
+  - Genetic varibaility with irrigated vs. dryland with soybean - drought stress reduced the pod and seed set.
+      * Irrigated had higher leaf transportation 
+      * Much lower yield in drylan - noticed pollen grains viabilty lowered due to stress and lower Carbon in the pollen
+  - Important traits for Screening: using sensors, campony measurements, imaging and theormal sensors. 
+  - Pollen Assay - to measure the pollen viviablity 
+  - Potential Traits for High TGemperature (Heat) Stress
+      * Reproductive success, seed set, seed numbers
+      * Favorable Respiration Increase Biomass
+      * Grain Filling duration and Grain Filling Rate
+      * Increased Membrance Stability 
+      * Canopy Temperature Depression 
+ - Potential Traits for Drought stress
+      * Stay Green 
+      * Limited transpiration (water savings in early season)
+      * Water usage
+  - Genetic varibility in current breeding lines is limited and need to explore and screen the germplasm include wild 
+ 
+ __Walid Sadok: The physiological basis of soybean adaptation to atmospheric drying: a role for nitrogen fixation__
+ 
+ 
