--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -51,7 +51,51 @@ __Vara Prasad: Impact of drought/heat on soybean and role of crop physiology in 
       * Limited transpiration (water savings in early season)
       * Water usage
   - Genetic varibility in current breeding lines is limited and need to explore and screen the germplasm include wild 
+  - [Sustainable Intensification Innovation Lab](https://www.k-state.edu/siil/)
  
  __Walid Sadok: The physiological basis of soybean adaptation to atmospheric drying: a role for nitrogen fixation__
+  - The water cycle; water vaper. VPD=Vapor %
+  - [Climatic forcing for recent significant terrestrial drying and wetting](https://www.sciencedirect.com/science/article/abs/pii/S0309170819302787)
+  - [Systemic effects of rising atmospheric vapor pressure deficit on plant physiology and productivity](https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.15548)
+  - Hypothesis: well-watered, increase VPD and increase nitrogen fixation
+  
+  
+ ### Breeding Innovation
  
+__Ed Anderson: Vision for a Coordinated National Message for Soybean Research__
+
+
+
+__Aaron Lorenz: Developing Resources to Advance Implementation of Genomic Prediction in Soybean__
+
+
+__Leonardo Gloria: Application of UAS Biomass Longitudinal Phenotypes to Selection in Soybean Breeding Trials__
+
+
+__Cesar Filippi: Soybean Breeding Innovation at GDM Seeds, Inc.__
+
+
+### Abiotic Stresses other than Drought
+
+__Jamie O'Rourke: Characterizing additional QTL in the soybean iron stress response__
+
  
+__Heng Ye: Gene-To-Field Characterization of WLT1 in Waterlogging Tolerance and Yield Protection in Soybean__
+
+
+__Anna Locke: Comparing temperature stress responses in the field and identifying regulators__
+
+
+### Technologies in Soybean Physiology
+
+__Phil Kerr: Planetary boundaries: Implications for global agriculture and the US soybean breeding community__
+
+
+__Felix Fritschi: Soybean under tension: Following the path of water__
+
+
+__Alvaro Sanz: Semi and high-throughput phenotyping technologies to measure different photosynthetic parameters in field__
+
+
+__Fernando Miguez: What is the optimum leaf area index for soybean? Modeling and observations__
+
