--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -1,12 +1,12 @@
 # __Soybean Breeders Worshop__
 
-__KEYNOTE SPEAKER:Dr. Grover Shannon__
+__KEYNOTE SPEAKER: Dr. Grover Shannon__
   - Offensive Breeding: example Yield; use checks of variteies that are used by farmers
   - Defensive Breeding: Disease and Pest reistance
   - Genetic Diversity: no using our germplasm to the full potential
   - [Research paper](https://bmcplantbiol.biomedcentral.com/articles/10.1186/1471-2229-10-195)
  
-__William Singer__:AAAS Science and Technology Policy Fellow, USDA- Office of the Chief Scientist
+__William Singer: AAAS Science and Technology Policy Fellow, USDA- Office of the Chief Scientist__
   - Information; partmnership; strategic planning; coordination; scientific integrity, and key performance indicators
   - Plant Breeding Working Group and Roadmap (PBWG)
  
