--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -63,18 +63,30 @@ __Vara Prasad: Impact of drought/heat on soybean and role of crop physiology in 
  ### Breeding Innovation
  
 __Ed Anderson: Vision for a Coordinated National Message for Soybean Research__
-
-
-
+  - What has worked
+      * Breeding for genetic gain/yield
+      * Stress management for yield preservation of traits
+  - What has not worked
+      * Research redundancy with people in bin/silos
+      * Lack of communication and partnership
+  - Vision 
+      * Break down bins/silos
+      * Transition project to programs
+      * Enchance communication and coordination of research and projects
+ 
 __Aaron Lorenz: Developing Resources to Advance Implementation of Genomic Prediction in Soybean__
-
+  - [Genomic selection has great advantages](https://doi.org/10.2135/cropsci2016.09.0742)
+  - Very simialar to his PAG30 presentation
+  - NUST enable germplasm sharing
+  - NUST soybean lines tend to segrate by maturity grouo
+  - Workflow: New Geniomic selection pipeline from genotyping to selection
 
 __Leonardo Gloria: Application of UAS Biomass Longitudinal Phenotypes to Selection in Soybean Breeding Trials__
-
-
+  - [Research paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5499164/)
+  - [Research paper](https://www.frontiersin.org/articles/10.3389/fpls.2021.715983/full)
+ 
 __Cesar Filippi: Soybean Breeding Innovation at GDM Seeds, Inc.__
-
-
+ 
 ### Abiotic Stresses other than Drought
 
 __Jamie O'Rourke: Characterizing additional QTL in the soybean iron stress response__
