--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -90,9 +90,16 @@ __Cesar Filippi: Soybean Breeding Innovation at GDM Seeds, Inc.__
 ### Abiotic Stresses other than Drought
 
 __Jamie O'Rourke: Characterizing additional QTL in the soybean iron stress response__
-
+  - [Review paper about iron stress in soybean](https://acsess.onlinelibrary.wiley.com/doi/10.1002/csc2.20661)
+  - [Mining Fiskeby III and Mandarin Expression Profiles to Understand Iron Stress](https://pubmed.ncbi.nlm.nih.gov/34681702/)
+  - [Comparing Early Transcriptomic Responses of 18 SoybeanbGenotypes to Iron Stress](https://pubmed.ncbi.nlm.nih.gov/34769077/)
+  - [Gene Expression Responses to Sequential Nutrient Deficiency Stresses in Soybean](https://pubmed.ncbi.nlm.nih.gov/33513952/)
+  - [Coupling VIGS with Short- and Long-Term Stress Exposure to Understand the Fiskeby III Iron Deficiency Stress Response](https://pubmed.ncbi.nlm.nih.gov/36614091/)
  
 __Heng Ye: Gene-To-Field Characterization of WLT1 in Waterlogging Tolerance and Yield Protection in Soybean__
+  - [Climate change induce increase in crop water damage](https://pubs.giss.nasa.gov/docs/2002/2002_Rosenzweig_ro02200i.pdf)
+  - [Major QTL for water logging on Gm03](https://onlinelibrary.wiley.com/doi/full/10.1111/pce.13190)
+  - [QTL for seed waterlogging tolerance](https://link.springer.com/article/10.1007/s10681-020-02736-1)
 
 
 __Anna Locke: Comparing temperature stress responses in the field and identifying regulators__
@@ -111,3 +118,38 @@ __Alvaro Sanz: Semi and high-throughput phenotyping technologies to measure diff
 
 __Fernando Miguez: What is the optimum leaf area index for soybean? Modeling and observations__
 
+### Breeding and Genetics of Composition 
+
+__Thomas Clemente: Adding novel genetic variation into soybean: A build-test-learn approach__
+
+
+__Montse Salmeron: Simulation of soybean seed composition with crop eco-physiological models__
+
+
+__Doug Allen: Altering carbon partitioning in developing soybeans through spatial and temporal considerations__
+
+
+
+__Zhibo Wang: Long-read whole genome sequencing reveals novel structural variation markers for important agronomic and quality traits of soybean__
+
+
+### Reports and announcements
+
+__Soybean Genomics Executive Committee Report__
+
+
+__SoyBase.org update__
+
+
+__Soybean Germplasm Committee report__
+
+
+### Highlights from Seed Industry 
+
+__Jon Massman: Leveraging advances in phenotyping & phenomics to accelerate gains in plant breeding programs__
+
+
+__Janie Hoormann: Harnessing the Power of Data Science for Pipeline Advancement__
+
+
+__Jon Fischer: BASF Soybean Trait Pipeline Review__
