--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -105,12 +105,23 @@ __Heng Ye: Gene-To-Field Characterization of WLT1 in Waterlogging Tolerance and 
 __Anna Locke: Comparing temperature stress responses in the field and identifying regulators__
 
 
+### SoyGEN3 Meeting
+  - [Project details](https://www.soybeanresearchdata.com/Project.aspx?id=54906)
+  - [AgriPlex 1K Soy Panel](https://www.agriplexgenomics.com/_files/ugd/ab9cc9_561640e12f2344be9075fdad35d7fe60.pdf)
+  - Items that SoyBase needs to focus on:
+      * Genome of NAM parents? or siblings? being sequenced with a interest at looking for structural variations that could be useful foer breeding purposes.
+          * Need to schudeule a meeting about this with Aaron and Matt
+      * Need to get SoybeanBase in better shape 
+          * Need quick reference tutorial on how to load data
+
 ### Technologies in Soybean Physiology
 
 __Phil Kerr: Planetary boundaries: Implications for global agriculture and the US soybean breeding community__
 
-
 __Felix Fritschi: Soybean under tension: Following the path of water__
+  - Leaf water condunctance
+  - Water use effieciency in soybean - went up while maintaining a cooler campony temperature
+  - 
 
 
 __Alvaro Sanz: Semi and high-throughput phenotyping technologies to measure different photosynthetic parameters in field__
