--- a/Conference_Notes/SBW2023.md
+++ b/Conference_Notes/SBW2023.md
@@ -133,13 +133,9 @@ __Fernando Miguez: What is the optimum leaf area index for soybean? Modeling and
 
 __Thomas Clemente: Adding novel genetic variation into soybean: A build-test-learn approach__
 
-
 __Montse Salmeron: Simulation of soybean seed composition with crop eco-physiological models__
 
-
 __Doug Allen: Altering carbon partitioning in developing soybeans through spatial and temporal considerations__
-
-
 
 __Zhibo Wang: Long-read whole genome sequencing reveals novel structural variation markers for important agronomic and quality traits of soybean__
 
@@ -148,9 +144,7 @@ __Zhibo Wang: Long-read whole genome sequencing reveals novel structural variati
 
 __Soybean Genomics Executive Committee Report__
 
-
 __SoyBase.org update__
-
 
 __Soybean Germplasm Committee report__
 
@@ -158,9 +152,10 @@ __Soybean Germplasm Committee report__
 ### Highlights from Seed Industry 
 
 __Jon Massman: Leveraging advances in phenotyping & phenomics to accelerate gains in plant breeding programs__
-
+  - [Modern Plant Breeding Triangle](https://www.frontiersin.org/articles/10.3389/fpls.2021.651480/full)
+  - [Improving soybean breeding with drones](https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11008/110080U/Improving-soybean-breeding-using-UAS-measurements-of-physiological-maturity/10.1117/12.2519072.short?SSO=1)
 
 __Janie Hoormann: Harnessing the Power of Data Science for Pipeline Advancement__
-
+ 
 
 __Jon Fischer: BASF Soybean Trait Pipeline Review__
